# hdb

./: .gitignore  README.md  plan.md  pyproject.toml
.claude/: rprompts.txt
.claude/agents/: coder.md  mapper.md  planner.md
codebase-analysis-docs/: codebasemap.md
codebase-analysis-docs/assets/: architecture-overview.mmd  keyboard-routing.mmd  update-sequence.mmd
src/hdb/: __init__.py  app.py  datatypes.py  visualizer.py
src/hdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_app_base_converter_behavior.py  test_datatypes.py  test_visualizer_behavior.py
